list invisible pagination and bug fixes

--- a/src/app/modules/user/rar-list/rar-list.component.scss
+++ b/src/app/modules/user/rar-list/rar-list.component.scss
@@ -41,11 +41,13 @@
 .modern-rar-name {
   font-size: 14px;
   color: #00ccff;
+  text-align: center;
 }
 
 .modern-rar-rank {
   font-size: 14px;
   color: #b9b9b9;
+  text-align: center;
 }
 
 .classic-boss-name {
